# NASDAQ100-DuckDB-Pipeline

./: .env.example  .gitignore  README.md  documentation.txt  pyproject.toml  requirements.txt
config/: constants.py  settings.py  tickers.csv
docs/: application_design.md
src/: main.py
src/api/: alpha_vantage.py  retry.py  yahoo_finance.py
src/database/: connection.py  schema.py  upsert.py
src/models/: stock_price.py
src/pipeline/: export.py  extract.py  load.py  pipeline.py  transform.py
src/utils/: file_handler.py  helpers.py  logger.py  timer.py
src/validators/: validator.py
